--- a/cadastro/sitecadastro/templates/atualizar_cadastro.html
+++ b/cadastro/sitecadastro/templates/atualizar_cadastro.html
@@ -41,8 +41,8 @@
             padding: 10px 20px;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 16px; /* Tamanho da fonte */
-            font-family: Arial, sans-serif; /* Fonte */
+            font-size: 16px; 
+            font-family: Arial, sans-serif; 
         }
         .form-container button[type="submit"] {
             background-color: #4CAF50;
@@ -53,15 +53,14 @@
             margin-right: 10px;
             padding: 10px 20px;
             border-radius: 5px;
-            font-size: 16px; /* Tamanho da fonte */
-            font-family: Arial, sans-serif; /* Fonte */
-            background-color: #007bff; /* Cor azul */
+            font-size: 16px; 
+            font-family: Arial, sans-serif; 
+            background-color: #007bff; 
             color: #fff;
             text-decoration: none;
         }
-        /* Estilos para a mensagem de sucesso */
         .success-message {
-            background-color: #4CAF50; /* Verde */
+            background-color: #4CAF50; 
             color: #fff;
             padding: 20px;
             border-radius: 10px;
@@ -70,13 +69,12 @@
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 999;
-            display: none; /* Inicialmente oculto */
+            display: none; 
         }
     </style>
 </head>
 <body class="w3-content" style="max-width:1300px">
 
-<!-- Formulário de Atualização de Cadastro -->
 <div class="w3-row" style="height: 100vh;">
   <div class="w3-container w3-black w3-center" style="height: 100%;">
     <div class="form-container">
